--- a/Web/Whiteboard/src/toolbar.scss
+++ b/Web/Whiteboard/src/toolbar.scss
@@ -135,6 +135,16 @@ $hover-bg: #e9f4f8;
   border-radius: 5px;
   justify-content: center;
   align-items: center;
+  &__delete-doc-wrapper {
+    display: flex;
+    align-items: center;
+  }
+  &__delete-doc {
+    cursor: pointer;
+    display: inline-flex;
+    align-items: center;
+    margin: 0 6px 0 8px;
+  }
   &__page-count {
     text-align: center;
     user-select: none;
@@ -162,6 +172,10 @@ $hover-bg: #e9f4f8;
 
   &__btn-add {
     padding: 0 3px;
+  }
+
+  select {
+    outline: none;
   }
 }
 
@@ -270,5 +284,8 @@ $hover-bg: #e9f4f8;
     input {
       margin: 0 4px;
     }
+  }
+  &__urls-input {
+    width: 200px !important;
   }
 }
