--- a/iOS/BasicOnlineClass/BasicOnlineClass/Base.lproj/Main.storyboard
+++ b/iOS/BasicOnlineClass/BasicOnlineClass/Base.lproj/Main.storyboard
@@ -22,7 +22,7 @@
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Channel Name" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eZ7-2J-HKl">
+                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Channel ID" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="eZ7-2J-HKl">
                                 <rect key="frame" x="50" y="178" width="314" height="34"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits"/>
@@ -75,7 +75,7 @@
                     </view>
                     <connections>
                         <outlet property="channelMode" destination="cOf-v7-vcN" id="Kmu-zG-QSt"/>
-                        <outlet property="channelName" destination="eZ7-2J-HKl" id="XmT-RQ-YDC"/>
+                        <outlet property="channelId" destination="eZ7-2J-HKl" id="XmT-RQ-YDC"/>
                         <outlet property="userName" destination="jcw-1T-qrR" id="1z8-67-gEY"/>
                     </connections>
                 </viewController>
